<resources>
    <string name="app_name">WeatherApp</string>
    <string name="action_settings">Settings</string>
    <string name="codIconDescription">Weather condition image</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="change_to_forecast">Forecast</string>
    <string name="change_to_weather">Weather</string>
</resources>
