<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/list_condIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="5dip"
        android:padding="3dip"
        android:adjustViewBounds="true"
        android:contentDescription="@string/codIconDescription"
        android:scaleType="fitXY" />

    <RelativeLayout
        android:id="@+id/listTextWrapper"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/list_condIcon">

        <TextView
            android:id="@+id/list_condDescr"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/list_temp"
            style="@style/tempStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/list_condDescr"
            android:layout_marginStart="3dp"
            android:layout_toEndOf="@id/list_condDescr" />

        <TextView
            android:id="@+id/list_pressLab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_condDescr"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:text="@string/pressure" />

        <TextView
            android:id="@+id/list_press"
            style="@style/valData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/list_pressLab"
            android:layout_toEndOf="@id/list_pressLab" />

        <TextView
            android:id="@+id/list_humLab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_pressLab"
            android:layout_alignParentStart="true"
            android:text="@string/humidity" />

        <TextView
            android:id="@+id/list_hum"
            style="@style/valData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/list_humLab"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/list_humLab" />

        <TextView
            android:id="@+id/list_windLab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_humLab"
            android:layout_alignParentStart="true"
            android:text="@string/wind" />

        <TextView
            android:id="@+id/list_windSpeed"
            style="@style/valData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/list_windLab"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/list_windLab" />
    </RelativeLayout>

    <TextView
        android:id="@+id/weatherDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listTextWrapper"
        android:textAlignment="center" />
</RelativeLayout>